# Rebecca

./: .gitignore  Dockerfile  README-fa.md  README-ru.md  README-zh-cn.md  README.md  alembic.ini  config.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: lint.yml  pr-build.yml  telegram-notify.yml  test-db.yml
app/: __init__.py  dependencies.py
app/db/: crud.py  models.py
app/db/crud/: __init__.py  admin.py  common.py  node.py  other.py  proxy.py  service.py  system.py  template.py  usage.py  user.py
app/jobs/: add_db_users.py  record_usages.py  review_users.py  sync_redis_to_db.py
app/models/: admin.py  ads.py  proxy.py  service.py  settings.py  system.py  user.py
app/reb_node/: config.py  core.py  operations.py  state.py
app/redis/: __init__.py  adapter.py  cache.py  user_cache.py
app/redis/repositories/: user_cache.py
app/routers/: __init__.py  admin.py  core.py  myaccount.py  node.py  service.py  service_v2.py  settings.py  subscription.py  system.py  user.py  user_v2.py
app/services/: access_insights.py  data_access.py  metrics_service.py  panel_settings.py  usage_service.py  user_service.py
app/subscription/: share.py
app/telegram/handlers/: admin.py
app/utils/: __init__.py  ads.py  credentials.py  jwt.py  notification.py  proxy_uuid.py  subscription_links.py  xray_config.py  xray_defaults.py
app/xray/: __init__.py  config.py  core.py
cli/: admin.py
dashboard/: __init__.py  biome.json  chakra.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
dashboard/src/: App.tsx  index.tsx
dashboard/src/components/: AdminDetailsDrawer.tsx  AdminDialog.tsx  AdminPermissionsEditor.tsx  AdminPermissionsModal.tsx  AdminsTable.tsx  AdminsUsage.tsx  AdvancedUserActions.tsx  AdvertisementCard.tsx  AppLayout.tsx  AppSidebar.tsx  BalancerModal.tsx  CompactPopover.tsx  CoreSettingsModal.tsx  CoreVersionDialog.tsx  DateTimePicker.tsx  DeleteNodeModal.tsx  DeleteUserModal.tsx  DnsModal.tsx  FakeDnsModal.tsx  Filters.tsx  GeoUpdateDialog.tsx  GitHubStars.tsx  Header.tsx  HostsManager.tsx  Icon.tsx  Input.tsx  JsonEditor.tsx  Language.tsx  NodeFormModal.tsx  NodeModalStatusBadge.tsx  NodesModal.tsx  NodesUsageAnalytics.tsx  OnlineBadge.tsx  OnlineStatus.tsx  OutboundModal.tsx  Pagination.tsx  QRCodeDialog.tsx  RadioGroup.tsx  ResetAllUsageModal.tsx  ResetUserUsageModal.tsx  (+14 more)
dashboard/src/constants/: NodesSettings.tsx  Proxies.tsx  UserSettings.tsx  adminPermissions.ts
dashboard/src/contexts/: AdminsContext.tsx  CoreSettingsContext.tsx  DashboardContext.tsx  HostsContext.tsx  NodesContext.tsx  ServicesContext.tsx
dashboard/src/hooks/: useAds.tsx  useAppleEmoji.ts  useGetUser.tsx
dashboard/src/locales/: i18n.ts
dashboard/src/pages/: AccessInsightsPage.tsx  AdminsPage.tsx  CoreSettingsPage.tsx  Dashboard.tsx  Login.tsx  (+11 more)
scripts/: entrypoint.sh
tests/: conftest.py  test_admin.py  test_user.py
(+60 files in other folders)
