[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Discover packages but exclude dashboard and other non-package directories
where = ["."]
exclude = ["dashboard*", "tests*", "Rebecca-node*", "Rebecca-scripts*", "3x-ui*", "V2bX*", "sing-box_mod*", "xray-core*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.txt", "*.md"]

[project]
name = "rebecca"
version = "0.1.0"
description = "Rebecca, Unified GUI Censorship Resistant Solution Powered by Xray."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.14.0",
    "anyio==4.2.0",
    "apscheduler==3.9.1.post1",
    "bcrypt==4.0.1",
    "click==8.1.7",
    "commentjson==0.9.0",
    "cryptography==43.0.1",
    "fastapi==0.115.2",
    "grpcio==1.67.1",
    "jinja2==3.1.4",
    "jdatetime==4.1.1",
    "passlib[bcrypt]==1.7.4",
    "protobuf==6.31.1",
    "psutil==5.9.4",
    "pydantic==2.10.4",
    "pyjwt==2.8.0",
    "pymysql==1.1.1",
    "pyopenssl==24.2.1",
    "pytelegrambotapi==4.9.0",
    "python-dateutil==2.8.2",
    "python-decouple==3.6",
    "python-dotenv==0.21.1",
    "python-multipart>=0.0.20",
    "pyyaml==6.0.2",
    "qrcode==7.4.2",
    "redis>=5.0,<6.0",
    "requests==2.32.3",
    "rich==13.7.1",
    "sqlalchemy==2.0.36",
    "starlette==0.40.0",
    "typer==0.7.0",
    "urllib3==1.26.19",
    "uvicorn[standard]==0.27.0.post1",
    "websockets==12.0",
    "websocket-client==1.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-watch>=4.2.0",
    "httpx>=0.27.2",
    "ruff>=0.11.6",
]

[tool.ruff]
line-length = 120
indent-width = 4
respect-gitignore = true
exclude = [
    "app/db/migrations",
    "xray_api/proto",  # Auto-generated proto files
    "Rebecca-node",   # Separate node service
    "Rebecca-scripts", # Separate scripts
    "3x-ui",          # External dependencies
    "V2bX",           # External dependencies
    "sing-box_mod",   # External dependencies
    "xray-core",      # External dependencies
]
fix = true

[tool.ruff.lint]
fixable = ["ALL"]
ignore = [
    "S101",   # Use of assert detected (needed for tests)
    "T20",    # print statements (CLI tool)
    "A003",   # Class attribute shadows builtin
    "F403",   # Star imports (intentional in __init__.py files)
    "F405",   # May be undefined from star imports (intentional)
    "E712",   # Equality comparisons to False/True (in proto files)
    "E402",   # Module level import not at top of file (in proto files)
    "F401",   # Unused imports (in auto-generated xray_api files)
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
